# egnitely-cli

./: Cargo.toml  README.md
src/: config.rs  create.rs  handler.rs  login.rs  logout.rs  main.rs  publish.rs
src/authn/: mod.rs
src/config/: mod.rs
src/extras/: response.rs
src/function/: entities.rs  mod.rs
src/generator/: mod.rs  rust_generator.rs
src/modules/: mod.rs
src/modules/authn/: command.rs  entities.rs  mod.rs  service.rs
src/modules/function/: command.rs  entities.rs  mod.rs  service.rs
src/modules/function/generator/: mod.rs  rust_generator.rs
src/modules/global/: command.rs  mod.rs
src/modules/project/: command.rs  entities.rs  mod.rs  service.rs
src/project/: entities.rs  mod.rs
src/provider/: mod.rs
src/template/: mod.rs
test-rs/: Cargo.toml
test-rs/src/: lib.rs
