[package]
name = "egnite"
version = "0.1.4"
description = "Egnite is a CLI tool for developing, publishing and managing Egnitely Functions"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://egnitely.com/"
repository = "https://github.com/egnitely/egnite-cli/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
uuid = { version = "1.1.0", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
rpassword = "7.0.0"
open = "3.0.2"
pickledb = "0.5.1"
dirs = "4.0"
walkdir = "2.3.2"
zip = "0.6.2"
toml = "0.5.9"
convert_case = "0.6.0"
indicatif = "0.17.1"
chrono = { version = "0.4.22", features = ["serde"]}
prettytable-rs = "^0.9"