[package] 
name = "test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
egnitely-client = { git="https://github.com/egnitely/egnitely-client-lib.git", version="0.1.0" }
